<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#BBDEFB"
        android:orientation="vertical"
        android:paddingStart="25dp">

        <TextView
            android:id="@+id/lblCodCompra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblCodigoCompra"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblCostoCompra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblTotal"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblFechaCompra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblFechaCompra"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.cardview.widget.CardView>