<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_color_rounded"
        android:orientation="horizontal"
        android:paddingLeft="55dp"
        android:paddingTop="8dp"
        android:paddingRight="10dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblCodigoMedica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_codigo"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblSingleNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_medicamento"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblSingleCantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblCantidadCompra"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/lblSinglePrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/costo_medicamento"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <NumberPicker
                android:id="@+id/myNumberPicker"
                android:layout_width="wrap_content"
                android:layout_height="108dp"
                android:layout_gravity="start"
                android:gravity="right"
                android:orientation="horizontal" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>